# express-rest-boilerplate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  MIGRATION.md  MIGRATION_NOTES.md  README.md  acceptance.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
migrations/: 20240101000000_create_users_table.sql  20240101000001_create_refresh_tokens_table.sql
src/: app_state.rs  config.rs  db.rs  docs.rs  errors.rs  extractors.rs  lib.rs  main.rs  schema.rs  test_utils.rs
src/api/tests/integration/: auth.test.js  user.test.js
src/handlers/: auth.rs  health.rs  mod.rs  user.rs
src/middleware/: auth.rs
src/models/: refresh_token.rs  user.rs
src/routes/: auth.rs  mod.rs  user.rs
src/services/: auth_service.rs  user_service.rs
tests/: api_handlers_test.rs  auth_middleware_test.rs  domain_handlers_test.rs  health_test.rs  integration_tests.rs
